--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
         <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         
-        <h1></h1>
+        <h1>HAPPY</h1>
 
-        <h3></h3>
+        <h3>WRITTEN BY PHARRELL WILLIAMS
+</h3>
 
         <p></p>
 
