--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <p></p>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span></span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
