automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <a href="" 
+        <img src=""
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
