--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src=""
+        <img src="columbia-logo.png" alt=""
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
