automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src="columbia-logo.png" alt=""
+        <img src="columbia-logo.png" alt="Pharell dripping">
 
-        <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span></span>
 
         <br>
         
