automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <img src="columbia-logo.png" alt="Pharell dripping">
 
-        <span></span>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
         
