automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src="columbia-logo.png" alt="Pharell dripping">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Pharell dripping">
 
         <span>COLUMBIARECORDS.COM</span>
 
         <br>
         
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src=""
 
       </div>
     </div>
