--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Pharell dripping">
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia logo">
 
         <span>COLUMBIARECORDS.COM</span>
 
         <br>
         
-        <img src=""
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony Logo"
 
       </div>
     </div>
