--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <br>
         
-        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony Logo"
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony logo">
 
       </div>
     </div>
